Fix font size issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Place your CSS styles in this file */
 @font-face{
-    font-family: 'Luminari';
+    font-family: 'Luminari-Regular';
     font-style: normal;
     font-weight: normal;
     src: url('Luminari-Regular.woff') format('woff');
@@ -26,7 +26,7 @@ body {
     background-size:contain;
     background-repeat: no-repeat;
     text-align: center;
-    font-family: "Luminari";
+    font-family: "Luminari-Regular";
     font-weight: normal;
     font-size: 1.8vw;
     padding-top: 9vw;
